# dx-solar-flow

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: tailwind.css
assets/styling/: main.css  navbar.css
documents/: how_to_render_workflow.md
src/: error.rs  main.rs  mytracer.rs
src/components/: edge.rs  flow.rs  graph.rs  mod copy.rs  mod.rs  node.rs
src/views/: flow.rs  graph.rs  home.rs  mod.rs  navbar.rs
src/workflow/: dag_graph.rs  dag_schemas.rs  edge.rs  mod.rs  node.rs  parser.rs  tests.rs  uri.rs  workflow.rs
